--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ body {
     line-height: 1;
   }
   
-  textarea{
+  .textarea{
     background: transparent;
     border: none;
     resize: none;
-    color: #000000;
+    color: green;
     border-left: 1px solid black;
     padding: 10px;
   }
@@ -20,19 +20,20 @@ body {
   .jumbotron {
     text-align: center;
     background-color: transparent;
-    color: black;
+    color: blackB;
     border-radius: 0;
-    border-bottom: 10px solid black;
+    /* border-bottom: 10px solid black; */
   }
   
   .description{
     white-space: pre-wrap;
   }
   
-  .time-block{
+  .time-block {
     text-align: center;
     padding: 20px;
     border-top: 1px solid;
+    border-left: 1px solid;
     border-bottom: 1px solid;
   }
   
