--- a/style.css
+++ b/style.css
@@ -1,80 +1,131 @@
-.container {
-    margin-bottom: 30px;
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1;
 }
 
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    line-height: 1;
-  }
+textarea{
+  position: absolute;
+  top:5px;
+  left:0px;
+  background:transparent;
+  border: none;
+  resize: none;
+  color: #000000;
+  font-size: 20px;
+  
+  text-align: left;
+  width:100%;
+  padding-left:10px;
+  
+  
+}
 
 
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-bottom: 10px solid black;
+  padding:20px;
+}
+
+.description{
+  white-space: pre-wrap;
+}
+
+.time-block{
+  text-align: center;
+  border-radius: 15px;
+  border-left: 15px;
+  border-color:  solid black;
+}
+
+.row {
   
-  #textArea{
-    background: lightgray;
-    border: none;
-    resize: none;
-    color: green;
-    border-left: 1px solid black;
-    padding: 10px;
-  }
+  white-space: pre-wrap;
+  height: 80px;
   
-  .jumbotron {
-    text-align: center;
-    background-color: transparent;
-    color: blackB;
-    border-radius: 0;
-    /* border-bottom: 10px solid black; */
-  }
+}
+
+.column {
+  border-right: 1px solid black;
+}
+
+#hour {
+  position: relative;
+  border-left: 1px solid black;
+  background: white;
+  color: #000000;
+  text-align: cen;
+  border-top: 1px solid #000000;
   
-  .description{
-    white-space: pre-wrap;
-  }
+  width:8%;
+}
+#userInput9, #userInput10, #userInput11, 
+#userInput12, #userInput1, #userInput2, 
+#userInput3, #userInput4, #userInput5 {
+  position: relative;
+  background: #77dd77;
+  /* background:green; */
+  color: #000000;
+  border-top: 1px solid #000000;
   
-  .time-block {
-    text-align: center;
-    padding: 20px;
-    border-top: 1px solid;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
-  }
+  width:80%;
+}
+
+#saveTheDate {
+  position: relative;
+  border:none;
+  background: white;
+  color: #000000;
+  text-align: right;
+  width:10%;
+}
+
+#hourOfDay{
+  position:absolute;
+  top:5px;
+  right:5px;
+}
+
+.past {
+  background-color: #d3d3d3;
+  color: white;
+}
+
+.present {
+  background-color: #ff6961;
+  color: white;
+}
+
+.future {
+  background-color: #77dd77;
+  color: white;
+}
+
+.saveBtn {
+  position:absolute;
+  top: 0;
+  left: 0;
+  border-left: 1px solid black;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #06AED5;
+  background-image: url("save.png")  ;
+  background-size: 25px 25px;
+  background-repeat: no-repeat;
+  background-position: center; 
+  height:100%;
+  width:100%;
+  padding-left:35px;
+  padding-top:15px;
   
-  .row {
-    white-space: pre-wrap;
-    height: 80px;
-    border-top: 1px solid white;
-  }
   
-  .hour {
-    background-color: #ffffff;
-    color: #000000;
-    border-top: 1px dashed #000000;
-  }
-  
-  .past {
-    background-color: #d3d3d3;
-    color: white;
-  }
-  
-  .present {
-    background-color: #ff6961;
-    color: white;
-  }
-  
-  .future {
-    background-color: #77dd77;
-    color: white;
-  }
-  
-  .saveBtn {
-    border-left: 1px solid black;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background-color: #06AED5;
-    color: white;
-  }
-  
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all .3s ease-in-out;
-  }
+}
+
+.saveBtn, i:hover {
+  font-size: 20px;
+  transition: all .3s ease-in-out;
+}
