--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ textarea{
   resize: none;
   color: #000000;
   font-size: 20px;
-  
   text-align: left;
   width:100%;
   padding-left:10px;
@@ -56,6 +55,7 @@ textarea{
 #hour {
   position: relative;
   border-left: 1px solid black;
+  border-bottom: 1px solid black;
   background: white;
   color: #000000;
   text-align: cen;
