--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@ body {
   .hour {
     background-color: #ffffff;
     color: #000000;
-    border-top: 1px dashed #000000;
-    border-left: 1px dashed #000000;
+    border-top: 1px solid #000000;
+    border-left: 1px solid #000000;
+    border-bottom: 1px solid black;
   }
   .past {
     background-color: #d3d3d3;
@@ -44,5 +45,4 @@ body {
     background-color: #06AED5;
     color: white;
   }
-  
   
