--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     white-space: pre-wrap;
     height: 80px;
     border-top: 1px solid white;;
+    color: black;
   }
   .hour {
     background-color: #ffffff;
@@ -28,15 +29,15 @@ body {
   }
   .past {
     background-color: #d3d3d3;
-    color: white;
+    color: black;
   }
   .present {
     background-color: #ff6961;
-    color: white;
+    color: black;
   }
   .future {
     background-color: #77dd77;
-    color: white;
+    color: black;
   }
   .saveBtn {
     border-left: 1px solid black;
