--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     font-size: 16px;
     line-height: 1;
   }
+  .container{
+    border-bottom: 1px solid black;
+  }
   .jumbotron {
     text-align: center;
     background-color: transparent;
